# mac_controller

./: .env.example  .gitignore  CLAUDE.md  CODEBASE_MAP.md  ToDo.txt  config.py  generate_watch_token.py  mac_controller_app.py  readme.md  requirements.txt  run.py  setup.sh  start_mac_controller_server.sh  test.py
mac_controller_rust/: Cargo.toml
mac_controller_rust/src/: main.rs  mdns_service.rs
mac_controller_rust/src/controllers/: alerts.rs  api.rs  connections.rs  media.rs  mod.rs  system.rs
src/: __init__.py  screen_share_server.py  server.py  webrtc_server.py
src/controllers/: __init__.py  alerts.py  api.py  connections.py  files.py  media_controller.py  mouse_controller.py  qr_generator.py  stream_controller.py  system_controller.py
src/services/: mdns_service.py
src/streams/: audio_server.py  screen_share_server.py  webrtc_server.py
src/templates/: qr_auth.html  screen_share.html  webrtc_share.html
src/utils/: auth_manager.py  keyboardMouseController.py  logger.py  socket.py
