[package]
name = "mac_controller_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.10"
thiserror = "1"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
zeroconf = "0.10"
local-ip-address = "0.5"
media-remote = "0.2.3"
actix-multipart = "0.7.2"
futures-util = "0.3.31"
rodio = "0.21.1"
hound = "3.5.1"
wavy = "0.9.1"
fon = "0.6.0"
once_cell = "1.21.3"
cpal = "0.16.0"

